--- a/responsive-website.html
+++ b/responsive-website.html
@@ -13,7 +13,9 @@
         }
         .food{
             border: 2px solid burlywood;
+            border-radius: 10px;
             padding: 50px;
+            
         }
         .food img{
             width: 75%;
